# shared-life-cost-agent

./: .gitignore  AGENTS.md  README.md
.agents/skills/code-review/: SKILL.md
.agents/skills/create-pr/: SKILL.md
.agents/skills/gh-pr-review-comments/: SKILL.md
.agents/skills/gh-pr-review-comments/agents/: openai.yaml
.agents/skills/gh-pr-review-comments/references/: comment-templates.md
.agents/skills/infra-log/: SKILL.md  role.json
.agents/skills/laravel-coding/: README.md  SKILL.md
.agents/skills/laravel-coding/references/: batch.md  model.md  (+8 more)
.codex/agents/: reviewer.toml
core-app/agent/: Dockerfile  pyproject.toml
core-app/agent/src/: config.py  expense_query_agent.py  expense_query_prompts.py  google_secret.py  main.py  normalizer.py  receipt_agent.py  sheets_tool.py  types.py  vision_ocr_tool.py
core-app/agent/tests/: __init__.py  test_expense_query_agent.py  test_normalizer.py  test_receipt_agent.py  test_sheets_tool.py
core-app/lambda/shared/: env.ts  lineReplyTarget.ts  logger.ts  secrets.ts  types.ts
core-app/lambda/webhook/: handler.ts  lineClient.ts  signature.ts
core-app/lambda/worker/: agentCoreClient.ts  handler.ts  lineClient.ts
docs/: README.md
docs/domain/: receipt-line-agent.md  template.md
docs/implementation/: receipt-line-agent-deploy.md
infra/: .env.example  cdk.json  jest.config.js  package-lock.json  package.json  tsconfig.json
infra/lib/: receipt-line-agent-stack.ts
infra/test/: line-client.test.ts  line-reply-target.test.ts  line-signature.test.ts  receipt-line-agent-stack.test.ts  webhook-handler.test.ts
